@@ -11,6 +11,11 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-28
+2014-07-17 David Schneider
+- Move h5 file closing from destructor to endJob. Address trac ticket #316
+- Move initialization into beginJob
+
 Tag: V00-01-27
 2014-07-17 David Schneider
 Clarify documentation for calibration filtering
